# geant4_minimal_examples

./: CMakeLists.txt  LICENSE  README.md  main.cc
src/: UserDefinedDetectorConstruction.cc  UserDefinedPrimaryGeneratorAction.cc
